# AI-CFD

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  artifacts.py  errors.py  files.py  foam_agent.py  geometry_diagnostics.py  geometry_preflight.py  jobs.py  main.py  mesh.py  preflight.py  prompt.py  schemas.py  settings.py  store.py
backend/app/openfoam/: __init__.py  artifacts.py  case_builder.py  geometry_readiness.py  mesh_corpus.py  mesh_validation.py  naca4412.py  parsers.py  report.py  runner.py  runner_types.py  snappy.py  templates.py  validation_meshes.py  visualization.py  wsl.py
backend/tests/: test_api.py  test_artifact_mirroring.py  test_artifacts.py  test_ci_workflow.py  test_external_mesh_corpus.py  test_files.py  test_foam_agent_mcp.py  test_geometry_diagnostics.py  test_geometry_readiness.py  test_jobs.py  test_local_openfoam_jobs.py  test_local_openfoam_settings.py  test_mesh_conversion.py  test_mesh_corpus_scripts.py  test_naca4412_generator.py  test_openfoam_artifacts.py  test_openfoam_case_builder.py  test_openfoam_mesh_validation.py  test_openfoam_parsers.py  test_openfoam_report.py  test_openfoam_runner.py  test_openfoam_snappy.py  test_openfoam_visualization.py  test_openfoam_wsl.py  test_phase45_release_contract.py  test_prompt.py  test_real_mode_preflight.py  test_store.py  test_validation_mesh_generators.py
docs/: AI_AGENT_CLONE_AND_VERIFY.md  EXTERNAL_AERO_V1_ROADMAP.md  GMSH_AIRFOIL_2D_TEMPLATE.md  LOCAL_OPENFOAM_NO_API_RUNBOOK.md  (+7 more)
(+45 files in other folders)
