[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cfd-workbench-backend"
version = "0.1.0"
description = "Local FastAPI wrapper for Foam-Agent CFD workflows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "networkx>=3.5",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "trimesh>=4.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
surface-repair = [
  "pymeshfix>=0.18.1",
]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]
